FIND_PACKAGE(WrapITK REQUIRED)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR})

LINK_DIRECTORIES(${PROJECT_BUILD_DIR})

BEGIN_WRAPPER_LIBRARY("${PROJECT_NAME}")
SET(WRAPPER_LIBRARY_DEPENDS Base)
SET(WRAPPER_LIBRARY_LINK_LIBRARIES IMVIEW rt)

WRAP_ITK_INSTALL(/Python/itkExtras ${CMAKE_CURRENT_SOURCE_DIR}/Python/itkExtras/imview.py)

WRAPPER_LIBRARY_CREATE_WRAP_FILES()
WRAPPER_LIBRARY_CREATE_LIBRARY()

