FIND_PACKAGE(WrapITK REQUIRED)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR})

LINK_DIRECTORIES(${PROJECT_BUILD_DIR})

ADD_DEFINITIONS(-DHAVE_SYSV_IPC)

SET(IMCLIENT_SRCS
	liarwrap.c
	imclient.c
)

ADD_LIBRARY(IMVIEWCLIENT ${IMCLIENT_SRCS})

#BEGIN_WRAPPER_LIBRARY("${PROJECT_NAME}")
WRAP_LIBRARY("${PROJECT_NAME}")
SET(WRAPPER_LIBRARY_DEPENDS Base)
SET(WRAPPER_LIBRARY_LINK_LIBRARIES IMVIEWCLIENT rt)

LINK_DIRECTORIES(${PROJECT_BUILD_DIR} ${PROJECT_BUILD_DIR}../)

WRAP_ITK_INSTALL(/Python/itkExtras ${CMAKE_CURRENT_SOURCE_DIR}/Python/itkExtras/imview.py)

#WRAPPER_LIBRARY_CREATE_WRAP_FILES()
#WRAPPER_LIBRARY_CREATE_LIBRARY()

AUTO_INCLUDE_MODULES()
END_WRAP_LIBRARY()
